apache_jira_description_comments/HIVE-25578_comments.txt
[~klcopp] please don't disable these; this should be fixed - you are about to disable 2 qtest suites

please do an investigation why these tests are failing; not just hunt to disable them...

...or fixing/investigating things is not your problem?

Okay I reverted... but still not sure how to move forward, as you mentioned that TestMiniLlapCliDriver#*[newline] passed for you locally

Seems that the issue is related to this command
{code}
add file ../../data/scripts/newline.py;
{code} 
I got the exception
{code}
Caused by: org.apache.hadoop.hive.ql.metadata.HiveException: [Error 20003]: An error occurred when trying to close the Operator running your custom script.
        at org.apache.hadoop.hive.ql.exec.ScriptOperator.close(ScriptOperator.java:557)
        at org.apache.hadoop.hive.ql.exec.Operator.close(Operator.java:708)
        at org.apache.hadoop.hive.ql.exec.Operator.close(Operator.java:708)
        at org.apache.hadoop.hive.ql.exec.Operator.close(Operator.java:708)
        at org.apache.hadoop.hive.ql.exec.tez.MapRecordProcessor.close(MapRecordProcessor.java:459)
        ... 15 more
{code}
 in a cluster if the file is not accessible in the specified path if I run query:
{code}
insert overwrite table tmp_tmp_n0 SELECT TRANSFORM(key, value) USING 'python newline.py' AS key, value FROM src limit 6;
{code}

hmm so python is the common denominator? what made that broken?
I was just able to reproduce it locally - I'll take a look at that script/etc

with newer programs in the container - we are now defaulting to python3....
the error is the most common a python2/python3:
{code}
dev@master2:~/hive$ python ./data/scripts/newline.py
  File "./data/scripts/newline.py", line 22
    print "1\\n2"
                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("1\\n2")?
{code}

it's a shame that we are communicating this issue as "[Error 20003]: An error occurred when trying to close the Operator running your custom script."

[~kgyrtkirk]  what was the outcome of this?

